--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc -b && vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"lint": "biome lint",
+		"format": "biome format --fix"
 	},
 	"dependencies": {
 		"@ark-ui/react": "^5.13.0",
@@ -29,6 +31,7 @@
 		"zod": "^3.25.56"
 	},
 	"devDependencies": {
+		"@biomejs/biome": "^2.1.2",
 		"@tailwindcss/vite": "^4.1.8",
 		"@types/react": "^19.1.6",
 		"@types/react-dom": "^19.1.6",
